2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Check if label match labelstr
	* installcheck/amlabel.pl: Fix

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg: Fix not adding label to tapleist file when
	  creating it

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c: Fix crash if read return -1

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* VERSION: 3.5

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amgetconf.pl: Fix for visible/hidden
	* perl/Amanda/Service/Amidxtaped.pm: Wait to load the config before
	  doing some setting
	* server-src/logfile.c: Abort on ENOENT error

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Curinfo/Info.pm: Fix writting the stats line

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Correctly initialize the visible property
	  field
	* installcheck/Amanda_Config.pl: Check visible field

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse hidden|visible on dumptype property
	* common-src/conffile.h (property_t) : Add visible field
	* man/xml-source/amanda.conf.5.xml: Document the new hidden|visible
	  keyword
	* perl/Amanda/Config.swg: Add the visible field
	* perl/amglue/ghashtable.c: Add the visible field
	* server-src/diskfile.c: Do not add hidden dumptype property to the
	  xml string

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/ambackupd.pl: Do incremental backup

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Cleanup.pm: Improvement

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Check result of fcntl

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsd-security.c: Add bsd_stream_pause and bsd_stream_resume